syntax = "proto2";

package raft;

option java_package = "com.example.raft";
option java_outer_classname = "MessageProtos";

message AppendEntries
{
	required int32 term = 1;
    required string leaderId = 2;
    required int32 prevLogIndex = 3;
    required int32 prevLogTerm = 4;
    repeated string entries = 5;
    required int32 leaderCommit = 6;
}

message AppendEntriesResponse
{
    required int32 term = 1;
    required bool success = 2;
}

message RequestVote
{
    required int32 term = 1;
    required string candidateId = 2;
    required int32 lastLogIndex = 3;
    required int32 lastLogTerm = 4;
}

message RequestVoteResponse
{
    required int32 term = 1;
    required bool voteGranted = 2;
}
